Bolo creation time with timezone

--- a/Code/package.json
+++ b/Code/package.json
@@ -37,7 +37,8 @@
     "jimp": "^0.2.9",
     "lodash": "^3.10.1",
     "method-override": "2.3.3",
-    "moment": "^2.10.6",
+    "moment": "*",
+    "moment-timezone": "*",
     "morgan": "1.6.1",
     "multiparty": "^4.1.2",
     "node-phantom": "^0.2.5",
