--- a/Code/package.json
+++ b/Code/package.json
@@ -29,8 +29,8 @@
     "express-session": "1.7.6",
     "gm": "^1.21.1",
     "gulp": "latest",
-    "gulp-exec": "latest",
     "gulp-confirm": "latest",
+    "gulp-exec": "latest",
     "iframe": "^0.3.1",
     "imagemin": "^4.0.0",
     "jade": "^1.11.0",
@@ -38,7 +38,7 @@
     "lodash": "^3.10.1",
     "method-override": "2.3.3",
     "moment": "*",
-    "moment-timezone": "*",
+    "moment-timezone": "^0.5.5",
     "morgan": "1.6.1",
     "multiparty": "^4.1.2",
     "node-phantom": "^0.2.5",
