--- a/Code/package.json
+++ b/Code/package.json
@@ -35,6 +35,7 @@
     "imagemin": "^4.0.0",
     "jade": "^1.11.0",
     "jimp": "^0.2.9",
+    "json2csv": "^3.6.2",
     "lodash": "^3.10.1",
     "method-override": "2.3.3",
     "moment": "*",
