--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ build/Release
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 
+# Temporary csv files
+csv/bolos.csv
+
 # Local environment variables
 .env
 #.env.example
