added api key field to example

--- a/Code/.env.example
+++ b/Code/.env.example
@@ -16,3 +16,6 @@ SESSION_SECRET="a secret string"
 # Password Salt for hashing user passwords
 # Note: It is preferable that a long string such as a UUID be used for this
 PASSWORD_SALT="some-random-salt"
+
+# Sendgrid key
+SENDGRID_API_KEY = API KEY
